--- a/css/portal.css
+++ b/css/portal.css
@@ -53,6 +53,22 @@ footer {
 
 /* START RESPONSIVE STYLES */
 
+/* Responsive iframe */
+
+.pageWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.pageWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 /* DESKTOP */
 @media all and (min-width:1400px) {
 	
