As I am doig my flex report, I learn better ways :)

--- a/fp/css/flex.css
+++ b/fp/css/flex.css
@@ -49,8 +49,8 @@ header{
 }
 
 .logo img {
-    width: 150px;
-    height: 100%;
+    width: 5em;
+    height: 5em;
     margin-left: -5px;
     margin-top; -5px;
 }
@@ -98,15 +98,15 @@ header{
 .s-sidebar__trigger {
    z-index: 2;
    position: fixed;
-   top: 0;
+   top: 8em;
    left: 0;
-   width: 100%;
+   width: 15%;
    height: 8em;
 }
 
 .s-sidebar__trigger > i {
    display: inline-block;
-   margin: 1.5em 0 0 1.5em;
+   margin: 0.5em 0 0 0.5em;
    color: yellow;
 }
 
@@ -221,7 +221,7 @@ hr.footer {
    
    /* Sidebar */
    .s-sidebar__trigger {
-      width: 4em;
+      width: 15%;
    }
    
    .s-sidebar__nav {
