--- a/fp/css/flex.css
+++ b/fp/css/flex.css
@@ -1,22 +1,31 @@
 /* Primary Styles */
 *, *::before, *::after {
-   box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
     background-color:#1C062A;
-    color: #87CEEB;
+    color: #cc9423;
+/*    color: #87CEEB;*/
 }
 
-body {
-   font-family: sans-serif;
-   font-size: 1em;
-   color: #87CEEB;
-   min-height: 100vh;
+body {    
+    display: flex;
+    flex-direction: row;
+    background-color:#1C062A;
+    align-items: stretch;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    font-family: sans-serif;
+    font-size: 1em;
+    color: #cc9423;
+    min-height: 100vh;
 }
 
 h1 {
-  font-size: xx-large;
+    font-size: 2.0em;
+    Font-style: italic;
+	font-family:  "Black And White Picture", "Lucida Grande", sans-serif;
 }
 
 em {
@@ -29,25 +38,66 @@ a {
 } 
 
 img + p {
-    text-align: center;
+    align-self: center;
     
 }
 
-/****************Header  **********/
-header{
-    display:block;
-    height: 150px;
-    margin: -5px 0px 0px -5px;
+section + h2, h3, h4 {
+    text-align: left;
+    
 }
 
-   .logo {
-      height: inherit;
-      float: left;
-      width: 15%;
-      max-width: 15%;
-      text-shadow:1px 1px #ccc234;
-      font-size:1.5em;
-      z-index: 0;
+h1 + p {
+    line-height: 1.1em;
+    text-align: right;    
+}
+
+
+/************************************
+ ************************************
+ ***                              ***
+ ***      Mobile First! CSS       ***
+ ***                              ***
+ ************************************
+ ***********************************/
+
+/************************************
+ ************************************
+ ***                              ***
+ ***      Mobile Header CSS       ***
+ ***                              ***
+ ************************************
+ ***********************************/
+
+header{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    position: fixed;
+    height: 6.5em;
+    width: 100%;
+    margin: -8px 0 0 0;
+    font-family: sans-serif;
+    background-color: #1C062A;
+    z-index: 100;
+}
+
+.logo {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    position: relative;
+    height: inherit;
+    margin: 10px 0 0 0;
+    font-family: sans-serif;
+    width: 15%;
+    max-width: 15%;
+    text-shadow:1px 1px #ccc234;
+    z-index: 0;
 }
 
 .logo img {
@@ -58,208 +108,176 @@ header{
 }
 
 .heading{
-    display: inline-block;
-    height: inherit;
-    float: left;
-    width: 85%;
-    text-align: right;
-    line-height: 1.5em;
-}
-
-/* Layout */
-.s-layout {
-   display: flex;
-   flex-direction: column-reverse;
-   width: 100%;
-/*   min-height: 100vh;*/
-}
-
-.s-layout__content {
-   display: flex;
-   flex-direction: column-reverse;
-   justify-content: center;
-   align-items: center;
-   flex: 1;
-}
-
-.s-layout__content section {
-    text-align: left;
-    width: 50%;
+    display: flex;
     flex-direction: column;
+    align-self: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    position: relative;
+    height: inherit;
+    padding-right: 1.0em;
+    width: 85%;
+    font-size:0.8em;
+    text-align: right;
+    line-height: 0.1em;
+    z-index: 10
 }
 
-.s-layout__content aside {
+/************************************
+ ************************************
+ ***                              ***
+ ***   Mobile Main Content CSS    ***
+ ***                              ***
+ ************************************
+ ***********************************/
+
+main {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: stretch;
+    justify-content: center;
+    padding: 8.5em 1em 0 0;
+    left:15%;
+    width: 100%;
+    z-index: 0;
+}
+
+.content {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    position: relative;
+    text-align: left;
+    width: auto;
+    padding: 0 1em 0 1em;
+}
+
+aside {
     text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-width: 45%;
+    width: auto;
 }
 
-.s-layout__content img {
-    width:75%;
+section img, aside img {
+    display: flex;
+    align-self: center;
+    position:relative;
+    width:90%;
+    z-index: -10;
 }
 
-/* Sidebar */
-.s-sidebar__trigger {
-   z-index: 2;
-   position: fixed;
-   top: 8em;
-   left: 0;
-   width: 15%;
-   height: 8em;
-}
-
-.s-sidebar__trigger > i {
-   display: inline-block;
-   margin: 0.1em 0 0 0.5em;
-   font-size: xx-large;
-   color: #87CEEB;
-}
-
-.s-sidebar__nav {
-   position: fixed;
-   bottom: 0;
-   left: -15em;
-   overflow: hidden;
-   transition: all .3s ease-in;
-   width: 15em;
-   height: 50%;
-   background: #1C062A;
-   opacity: 0.80;
-   font-size: 1.1em;
-   line-height: .5em;
-}
-
-.s-sidebar__nav:hover,
-.s-sidebar__nav:focus,
-.s-sidebar__trigger:focus + .s-sidebar__nav,
-.s-sidebar__trigger:hover + .s-sidebar__nav {
-   left: 0;
-}
-
-.s-sidebar__nav ul {
-   position: absolute;
-   bottom: 0;
-   left: 0;
-   margin: 0;
-   padding: 0;
-   width: 15em;
-}
-
-.s-sidebar__nav ul li {
-   width: 100%;
-}
-
-.s-sidebar__nav-link {
-   position: relative;
-   display: inline-block;
-   width: 100%;
-   height: 4em;
-}
-
-.s-sidebar__nav-link em {
-   position: absolute;
-   top: 50%;
-   left: 4em;
-   transform: translateY(-50%);
-}
-
-.s-sidebar__nav-link:hover {
-   background: #88aacb;
-}
-
-.s-sidebar__nav-link > i {
-   position: absolute;
-   top: 0;
-   left: 0;
-   display: inline-block;
-   width: 4em;
-   height: 4em;
-}
-
-.s-sidebar__nav-link > i::before {
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-}
-
-/*************  Footer CSS *************/
+/************************************
+ ************************************
+ ***                              ***
+ ***      Mobile Footer CSS       ***
+ ***                              ***
+ ************************************
+ ***********************************/
 footer{
-	clear:both;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content:flex-end;
+    align-self: flex-end;
+    text-align: right;
+    flex-wrap: nowrap;
+    clear:both;
     bottom: 0;
     right: 0;
-    padding-right: 10px;
+    padding-right: 1em;
     width: 100%;
 }
 
 /*hr line for footer */
 hr.footer {
-  border: 2px solid; 
-  border-color: #2C3539;
-  border-radius: 2px;
-  bottom: 0;
-  text-align: right;
-  margin-right: 0;
-  width: 65%;
-}
-
-.footer_content {
-    text-align: right;
+    border: 2px solid; 
+    border-color: #2C3539;
+    border-radius: 2px;
     bottom: 0;
+    text-align: right;
+    margin-right: 0;
+    width: 70%;
 }
 
-/* Tablet */
-@media (min-width: 42em) {
-   .s-layout__content {
-      margin-left: 4em;
-      flex-direction: row;
-      flex-wrap: wrap;
-   }
-    
-   .s-layout__image {
-      margin-left: 4em;
-   }
+/************************************
+ ************************************
+ ***                              ***
+ ***   Tables CSS adjustments     ***
+ ***                              ***
+ ************************************
+ ***********************************/
+@media (min-width: 48em) {
    
-   /* Sidebar */
-   .s-sidebar__trigger {
-      width: 15%;
-   }
-   
-   .s-sidebar__nav {
-      width: 4em;
-      left: 0;
-   }
-   
-   .s-sidebar__nav:hover,
-   .s-sidebar__nav:focus,
-   .s-sidebar__trigger:hover + .s-sidebar__nav,
-   .s-sidebar__trigger:focus + .s-sidebar__nav {
-      width: 15em;
-   }
-}
-/************Desk top CSS ************/
-@media (min-width: 68em) {
-   .s-layout__content {
-      margin-left: 15em;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      padding: 15px;
-   }
-
-   .s-layout__content img {
-      flex-direction: row;
-      align-content: center;
-      width:80%;
+    header{
+        background-color: transparent;
     }
+    
+    .content {
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        margin: 2em 0 0 10em;
+        min-width: 45%;
+    }
+    
+    section {
+        min-width: 45%;
+    }    
+}
+/************************************
+ ************************************
+ ***                              ***
+ ***   Desktop CSS adjustments    ***
+ ***                              ***
+ ************************************
+ ***********************************/
 
-   /* Sidebar */
-   .s-sidebar__trigger {
-      display: none;
-   }
-   
-   .s-sidebar__nav {
-      width: 15em;
-   }
-   
-   .s-sidebar__nav ul {
-      bottom: 0;
-   }
+@media (min-width: 68em) {
+    
+    h1 {
+        font-size: 4.5em;
+        text-align: right;
+    }
+    
+    header {
+        padding: 0 1em 0 0;
+    }
+    
+    .logo {
+        margin: 20px 0 0 0;
+        width: 20%;
+        max-width: 20%;
+    }
+    
+    .logo img {
+        width: 8em;
+        height: 8em;
+        margin: -5px 0 0 15px;
+        }
+    
+    .heading{
+        width: 80%;
+        flex-wrap: nowrap;
+    }
+    
+    .content {
+        align-items: flex-start;
+        flex-wrap: nowrap;
+        margin: 0 0 0 15em;
+    }
+    
+    section img {
+        padding: 0 0 0 12em;
+        width: 100%;
+    }
 }
